Fix: Picture card on mobile safari

--- a/app/assets/stylesheets/components/_picture_card.scss
+++ b/app/assets/stylesheets/components/_picture_card.scss
@@ -5,6 +5,7 @@
   grid-template-columns: repeat(4, 25%);
   grid-template-rows: repeat(2, 50%);
   margin-bottom: 1rem;
+  max-height: 20rem;
 
   @media (min-width:$breakpoint-md) {
     grid-template-rows: 10rem 15rem;
